--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#default profile
+spring.profiles.active=dev
+#paths
 server.servlet.context-path=/performance
 spring.resources.static-locations=classpath:/js
+#DDL validation
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=validate
