--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
 
   <groupId>io.rainfall</groupId>
   <artifactId>rainfall-store</artifactId>
-  <version>1.5.2-SNAPSHOT</version>
+  <version>1.5.3-SNAPSHOT</version>
+  <name>rainfall-store</name>
   <packaging>pom</packaging>
 
   <modules>
