--- a/client/pom.xml
+++ b/client/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>io.rainfall</groupId>
     <artifactId>rainfall-store</artifactId>
-    <version>1.5.4-SNAPSHOT</version>
+    <version>1.6.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -66,7 +66,7 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>[1.2.0,)</version>
+      <version>1.2.10</version>
       <scope>provided</scope>
     </dependency>
 
