--- a/server/pom.xml
+++ b/server/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>rainfall-store</artifactId>
     <groupId>io.rainfall</groupId>
-    <version>1.5.4-SNAPSHOT</version>
+    <version>1.6.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -52,8 +52,8 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>[1.2.0,)</version>
-      <scope>runtime</scope>
+      <version>1.2.10</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
