--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
   <groupId>io.rainfall</groupId>
   <artifactId>rainfall-store</artifactId>
-  <version>1.6.4-SNAPSHOT</version>
+  <version>1.6.4</version>
   <name>rainfall-store</name>
   <packaging>pom</packaging>
 
@@ -232,7 +232,7 @@
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
-            <version>1.6.4-SNAPSHOT</version>
+            <version>1.6.4</version>
             <extensions>true</extensions>
             <configuration>
               <serverId>ossrh</serverId>
