--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>rainfall-store</artifactId>
     <groupId>io.rainfall</groupId>
-    <version>1.6.5</version>
+    <version>1.6.5-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
