--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
   <groupId>io.rainfall</groupId>
   <artifactId>rainfall-store</artifactId>
-  <version>1.6.6-SNAPSHOT</version>
+  <version>1.6.6</version>
   <name>rainfall-store</name>
   <packaging>pom</packaging>
 
