--- a/client/pom.xml
+++ b/client/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>io.rainfall</groupId>
     <artifactId>rainfall-store</artifactId>
-    <version>1.6.8-SNAPSHOT</version>
+    <version>1.6.9</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
